almost finish the haitham portfolio

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
             <div class="about__buttons">
               <a
-                href="assets/pdf/Haithmresume.pdf
+                href="assets/pdf/Haithmresume.pdf"
                 class="button button--flex"
                 target="_blank"
                 >Download CV<i class="uil uil-download-alt button__icon"></i
@@ -907,6 +907,7 @@
               <div>
                 <h3 class="contact__title">Call Me</h3>
                 <span class="contact__subtitle"></span>
+                +967 738062163
               </div>
             </div>
 
@@ -915,6 +916,7 @@
               <div>
                 <h3 class="contact__title">Email</h3>
                 <span class="contact__subtitle"></span>
+                haithmebrahim34@gmail.com
               </div>
             </div>
 
@@ -922,7 +924,7 @@
               <i class="uil uil-map-marker contact__icon"></i>
               <div>
                 <h3 class="contact__title">Location</h3>
-                <span class="contact__subtitle">Yamen</span>
+                <span class="contact__subtitle">Yemen Hodaidah</span>
               </div>
             </div>
           </div>
